--- a/package.json
+++ b/package.json
@@ -17,28 +17,31 @@
     "url": "https://github.com/mwilliamson/mammoth.js.git"
   },
   "dependencies": {
-    "@xmldom/xmldom": "^0.8.6",
-    "argparse": "~1.0.3",
+    "@xmldom/xmldom": "^0.8.11",
+    "argparse": "~1.0.10",
     "base64-js": "^1.5.1",
-    "bluebird": "~3.4.0",
+    "bluebird": "~3.7.2",
     "dingbat-to-unicode": "^1.0.1",
-    "jszip": "^3.7.1",
+    "jszip": "^3.10.1",
     "lop": "^0.4.2",
     "path-is-absolute": "^1.0.0",
-    "underscore": "^1.13.1",
-    "xmlbuilder": "^10.0.0"
+    "shell-quote": "^1.8.3",
+    "underscore": "^1.13.7",
+    "xml2js": "^0.6.2",
+    "xmlbuilder": "^10.1.1"
   },
   "devDependencies": {
-    "@types/node": "^20.2.5",
-    "browserify": "~13.0.1",
+    "@types/node": "^20.19.11",
+    "browserify": "~17.0.1",
     "browserify-prepend-licenses": "~1.0.0",
     "duck": "^0.1.12",
-    "eslint": "2.13.1",
-    "hamjest": "^4.0.1",
-    "mocha": "~2.2.5",
+    "eslint": "8.50.0",
+    "hamjest": "^4.1.0",
+    "mocha": "~10.2.0",
+    "officegen": "^0.6.5",
     "temp": "^0.9.4",
-    "typescript": "^5.0.4",
-    "uglify-js": "~2.4.8"
+    "typescript": "^5.9.2",
+    "uglify-js": "~3.19.3"
   },
   "browser": {
     "./lib/unzip.js": "./browser/unzip.js",
